05-ingress/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelo-ingress
  namespace: travelo
  labels:
    app: travelo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  
  rules:
    # Règle 1: travelo.local (nom demandé par le sujet)
    - host: travelo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    
    # Règle 2: frontend.travelo.local (cohérence avec Malak Volet 1)
    - host: frontend.travelo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    
    # Règle 3: backend.exam.local (URL hardcodée dans le bundle React)
    - host: backend.exam.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
    
    # Règle 4: localhost (pour accès via port-forward sur Windows)
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
